--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "some util function ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/sunyuhui/util/issues"
   },
-  "homepage": "https://github.com/sunyuhui/util#readme"
+  "homepage": "https://github.com/sunyuhui/util#readme",
+  "devDependencies": {
+    "mocha": "^3.2.0"
+  }
 }
