--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/sunyuhui/util#readme",
   "devDependencies": {
+    "chai": "^3.5.0",
     "mocha": "^3.2.0"
+  },
+  "dependencies": {
   }
 }
